# SpaceRun

./: CMakeLists.txt  README.md
include/glad/: glad.h
models/: license.txt  scene.gltf
shaders/: asteroid_instance_vertex.glsl  fragment.glsl  propulsion_fragment.glsl  propulsion_vertex.glsl  shield_fragment.glsl  shield_vertex.glsl  ui_fragment.glsl
src/: asteroid.h  asteroidField.h  camera.h  game_item.h  glad.c  lighting.h  main.cpp  mesh.h  model.h  player.h  primitives.h  shader.h  skybox.h  ui.h
src/engine/: lighting.h  mesh.h  model.h  primitives.h  shader.h  skybox.h  ui.h
src/engine/libs/: glad.c
